changed about us

--- a/index.html
+++ b/index.html
@@ -91,13 +91,14 @@
     <div class="container-fluid padding">
         <div class="row welcome text-center">
             <div class="col-12">
-                <h1 class="display-4">Built it with ease</h1>
+                <h1 class="display-4">We Serve We Built</h1>
             </div>
             <hr>
             <div class="col-12">
-                <p class="lead"> This is unofficial and is very beautiful to fulfil the demands of
-                     america in the beautiful world dreams like twinkle stars, twinkle stars all the rings. That is what is 
-                    who is that and is the ease in  the house of the america you will not succeed a moment of today</p>
+                <p class="lead"> We provide services which are hard for you to reach out.
+                    Our service providers are a click away, they will provide you the best services available.
+                    The best is provided to you from the best in your locality.
+                </p>
             </div>
             
         </div>
