First phase completed

--- a/registration.html
+++ b/registration.html
@@ -97,9 +97,10 @@
           </div>
         </div>
        
-          <select name="service" class="btn btn-primary dropdown-toggle" id=service>
+          <select name="service" class="btn btn-primary dropdown-toggle btn-drop" id="service"
+           style="background-color: rgb(0, 0, 0); border-color: rgb(255, 35, 35);">
             <div class="dropdown-menu" >
-              <option class="dropdown-item" value="" disabled selected hidden>Select Service</option>
+              <option class="dropdown-item" value="" disabled selected hidden > Select Service</option>
               <option value=101>Electrician</option>
               <option value=102>Carpenter</option>
               <option value=103>Plumber</option>
