--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -22,7 +22,7 @@
                     </li>
                    
                     <li class="nav-item">
-                        <a class="nav-link" href="#"> Logout</a>
+                        <a class="nav-link" href="index.php"> Logout</a>
                     </li>
                 </ul>
             </div>
