customer dashboard, request section completed

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DHS | Admin Dashboard</title>
     <link href="stylesheets/bootstrap.css" rel="stylesheet">
     <link href="stylesheets/admin-dashboard.css" rel="stylesheet">
 </head>
@@ -35,7 +35,7 @@
                 <a href="admin-tables.php?id=cust">
                 <div class="box5">
                     
-                    <img src="images/customer.png" alt="">
+                    <img src="images/customer2.jpeg" alt="">
                     <!-- <ul class="icon">
                         <li><a href="#" class="fa fa-search"></a></li>
                         <li><a href="#" class="fa fa-link"></a></li>
