--- a/home.html
+++ b/home.html
@@ -62,22 +62,24 @@
 <div class="swiper-container mySwiper">
 <div class="swiper-wrapper">
   <div class="swiper-slide">
-    <img src="images/carpenter.png" />
+    <img src="images/carpenter.png" >
+  </div>
+ 
+  <div class="swiper-slide">
+    <img src="images/cleaner.png" >
   </div>
   <div class="swiper-slide">
-    <img src="images/cleaner.png" />
+    <img src="images/mechanic.png" >
   </div>
   <div class="swiper-slide">
-    <img src="images/mechanic.png" />
+    <img src="images/painter.png" >
   </div>
   <div class="swiper-slide">
-    <img src="images/painter.png" />
-  </div>
-  <div class="swiper-slide">
-    <img src="images/plumber.png" />
+    <img src="images/plumber.png" >
   </div>
 
 <div class="swiper-pagination"></div>
+</div>
 </div>
 </div>
 </div>
@@ -102,6 +104,6 @@ var swiper = new Swiper(".mySwiper", {
   loop:true,
 });
 </script>
-</script>
+
 </body>
 </html>
